--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
+    "cy:run": "cypress run",
     "test:e2e": "vue-cli-service test:e2e",
-    "test:unit": "vue-cli-service test:unit",
-    "cy:run": "cypress run"
+    "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
     "apexcharts": "^3.8.6",
@@ -16,10 +16,11 @@
     "bootstrap": "^4.3.1",
     "bootstrap-vue": "^2.0.2",
     "core-js": "^2.6.5",
-    "lodash": "^4.17.15",
     "hover.css": "^2.3.2",
+    "lodash": "^4.17.15",
     "vue": "^2.6.10",
     "vue-apexcharts": "^1.5.0",
+    "vue-apollo": "^3.0.0-beta.11",
     "vue-router": "^3.0.3",
     "vuex": "^3.0.1"
   },
@@ -36,9 +37,11 @@
     "babel-jest": "^23.6.0",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
+    "graphql-tag": "^2.9.0",
     "lint-staged": "^8.1.5",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
+    "vue-cli-plugin-apollo": "^0.21.1",
     "vue-template-compiler": "^2.6.10"
   },
   "gitHooks": {
